Signin-up buyers.

--- a/register-as-buyer.html
+++ b/register-as-buyer.html
@@ -20,23 +20,23 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-						 
+					<nav class="navbar navbar-toggleable-md navbar-light">					 
 						<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
 							<span class="navbar-toggler-icon"></span>
-						</button> <a class="navbar-brand" href="#">diverswithease</a>
+						</button> 
+						<a class="navbar-brand" href="#">diverswithease</a>
 						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 							<ul class="navbar-nav ml-md-auto">
 								<li class="nav-item dropdown">
 									 <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown">Sign in</a>
-									<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+									<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 										 <a class="dropdown-item" href="#">Sign in as buyer</a> 
 										 <a class="dropdown-item" href="#">Sign in as supplier</a>
 									</div>
 								</li>
 								<li class="nav-item dropdown">
 									 <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown">Join free</a>
-									<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+									<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 										 <a class="dropdown-item" href="#">Join as buyer</a> 
 										 <a class="dropdown-item" href="#">Join as supplier</a>
 									</div>
@@ -49,71 +49,73 @@
 		</div>	
 	</div>
 	<div class="container">
-		<div class="row ">
-			<div class="w-100">
-			</div>	
-			<div class="col-md">
-				<h4 class="text-center">Sign in as buyer</h4>
-				<form>
-				  <div class="form-group">
-					<label for="exampleInputEmail1">Email *</label>
-					<input type="email" placeholder="Enter email" aria-describedby="emailHelp" id="exampleInputEmail1" class="form-control">
-				  </div>
-				  <div class="form-group">
-					<label for="exampleInputPassword1">Password *</label>
-					<input type="password" placeholder="Password" id="exampleInputPassword1" class="form-control">
-				  </div><div class="form-group">
-					<label for="exampleInputPassword1">Confirm Password *</label>
-					<input type="password" placeholder="Password" id="exampleInputPassword1" class="form-control">
-				  </div>
-				  <a href="complete-profile-buyer.html" class="btn btn-primary sign-in-button" type="submit">Join Now</a>
-				</form>
-				<small id="required-text" class="form-text text-muted text-center">*Required fields</small>
-			</div>
-			<div class="col-md">
-			<h4 class="text-center">Feature Overview</h4>
-				<div class="row">
-					<div class="col-2">
-						<img src="images/icon-2.png">
+		<div class="row">
+			<div class="col-md-10 mx-auto padding-zero">
+				<div class="row mobile-row">			
+					<div class="col-md-12 col-lg-12 col-xl-6">
+						<div class="col-md-12 mx-auto boxed-section boxed-registered-as-buyer">
+							<h4 class="text-center div-with-ease">diverswithease</h4>
+							<form>
+							  <div class="form-group">
+								<label for="exampleInputEmail1">Email*</label>
+								<input type="email" placeholder="test@gmail.com" aria-describedby="emailHelp" id="exampleInputEmail1" class="form-control">
+							  </div>
+							  <div class="form-group">
+								<label for="exampleInputPassword1">Password *</label>
+								<input type="password" placeholder="8 digits or letters" id="exampleInputPassword1" class="form-control">
+							  </div>
+							  <div class="form-group">
+								<label for="exampleInputPassword1">Confirm Password *</label>
+								<input type="password" placeholder="8 digits or letters" id="exampleInputPassword1" class="form-control">
+							  </div>
+							  <a href="complete-profile-buyer.html" class="btn btn-primary sign-in-button join-now-button">Join Now</a>
+							</form>
+							<small id="required-text" class="form-text text-muted text-center">*Required fields</small>
+						</div>
 					</div>
-					<div class="col-8">			
-						<p class="col-heading-icons-details-signin">
-							<strong>View interactive, video content</strong>
-							Absorb relevant supplier information easily, and discover new suppliers quickly.
-						</p>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-2">
-						<img src="images/icon-2.png">
-					</div>
-					<div class="col-8">			
-						<p class="col-heading-icons-details-signin">
-							<strong>View interactive, video content</strong>
-							Absorb relevant supplier information easily, and discover new suppliers quickly.
-						</p>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-2">
-						<img src="images/icon-2.png">
-					</div>
-					<div class="col-8">			
-						<p class="col-heading-icons-details-signin">
-							<strong>View interactive, video content</strong>
-							Absorb relevant supplier information easily, and discover new suppliers quickly.
-						</p>
+					<div class="col-md-12 col-lg-12 col-xl-6">
+						<div class="col-md-12 mx-auto boxed-section boxed-registered-as-buyer">
+						<h4 class="text-center">Now, let's get started!</h4>
+							<hr>
+							<div class="row">
+								<div class="col-12">			
+									<p class="col-heading-icons-details-signin  para-two">
+										<strong>Complete your profile.</strong>
+										 Create a password, fill out your basic information, and validate your interests as they relate to supplier discovery.  
+									</p>
+									<p class="col-heading-icons-details-signin para-two">
+										At the end, you’ll be given <strong>one of three cool titles:</strong>
+									</p>
+										<ol class="col-heading-icons-details-signin para-two">
+										  <li>Chief Decision Maker</li>
+										  <li>Creator of Opportunities</li>
+										  <li>Search Engine Optimizer</li>
+										</ol>
+									<p class="col-heading-icons-details-signin para-two">
+										When you View video content suppliers are notified that an Anonymous <strong>SEO</strong> – for example – viewed their profile.  You earn points for activities such as <strong>Likes</strong> and <strong>Comments</strong> that can be awarded to promising suppliers. <strong>Awarded Points</strong> give suppliers a higher ranking on our <strong>Watchlist</strong>.
+									</p>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
 			 <div class="w-100"></div>
-			<div class="col">
-				<p><a href="#">Register as buyer</a>  |  <a href="#">Register as supplier</a></p>
-			</div>
-			<div class="col">
-				<p><a href="#">Signing up you agree with<a href="#">Terms of service</a></p>
+			<div class="col-10 mx-auto padding-zero">
+				<p class="register-bs"><a href="register-as-buyer.html">Register as buyer</a>  &nbsp;&nbsp;|&nbsp;&nbsp;  <a href="#">Register as supplier</a></p>
 			</div>
 		</div>
+		<footer>
+		<hr>
+			<div class="row">
+				<div class="col">
+					<p class="footer-logo">diverswithease</p>
+				</div>
+				<div class="col">
+					<p class="footer-copyrights text-right">Copyright © 2013 All Rights Reserved</p>
+				</div>
+			</div>	
+		</footer>
 		
 	</div>	
 
