--- a/signin-up.html
+++ b/signin-up.html
@@ -49,66 +49,87 @@
 		</div>	
 	</div>
 	<div class="container">
-		<div class="row ">
-			<div class="w-100">
-			</div>	
-			<div class="col-md">
-				<h4 class="text-center">Sign in as buyer</h4>
-				<form>
-				  <div class="form-group">
-					<label for="exampleInputEmail1">Email*</label>
-					<input type="email" placeholder="Enter email" aria-describedby="emailHelp" id="exampleInputEmail1" class="form-control">
-				  </div>
-				  <div class="form-group">
-					<label for="exampleInputPassword1">Password*</label>
-					<input type="password" placeholder="Password" id="exampleInputPassword1" class="form-control">
-				  </div>
-				  <button class="btn btn-primary sign-in-button" type="submit">Sign In</button>
-				  <button class="btn btn-primary forgot-password-button" type="submit">Forgot your password?</button>
-				</form>
-				<small id="required-text" class="form-text text-muted text-center">*Required fields</small>
-			</div>
-			<div class="col-md">
-			<h4 class="text-center">Feature Overview</h4>
-				<div class="row">
-					<div class="col-2">
-						<img src="images/icon-2.png">
+		<div class="row">
+			<div class="col-md-10 mx-auto padding-zero">
+				<div class="row mobile-row">			
+					<div class="col-md-12 col-lg-12 col-xl-6">
+						<div class="col-md-12 mx-auto boxed-section">
+							<h4 class="text-center">Sign in as buyer</h4>
+							<form>
+							  <div class="form-group">
+								<label for="exampleInputEmail1">Email *</label>
+								<input type="email" placeholder="test@gmail.com" aria-describedby="emailHelp" id="exampleInputEmail1" class="form-control">
+							  </div>
+							  <div class="form-group">
+								<label for="exampleInputPassword1">Password *</label>
+								<input type="password" placeholder="8 digits or letters" id="exampleInputPassword1" class="form-control">
+							  </div>
+							  <button class="btn btn-primary sign-in-button" type="submit">Sign In</button>
+							  <button class="btn btn-primary forgot-password-button" type="submit">Forgot your password?</button>
+							</form>
+							<small id="required-text" class="form-text text-muted text-center">*Required fields</small>
+						</div>
 					</div>
-					<div class="col-8">			
-						<p class="col-heading-icons-details-signin">
-							<strong>View interactive, video content</strong>
-							Absorb relevant supplier information easily, and discover new suppliers quickly.
-						</p>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-2">
-						<img src="images/icon-2.png">
-					</div>
-					<div class="col-8">			
-						<p class="col-heading-icons-details-signin">
-							<strong>View interactive, video content</strong>
-							Absorb relevant supplier information easily, and discover new suppliers quickly.
-						</p>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-2">
-						<img src="images/icon-2.png">
-					</div>
-					<div class="col-8">			
-						<p class="col-heading-icons-details-signin">
-							<strong>View interactive, video content</strong>
-							Absorb relevant supplier information easily, and discover new suppliers quickly.
-						</p>
+					<div class="col-md-12 col-lg-12 col-xl-6">
+						<div class="col-md-12 mx-auto boxed-section">
+						<h4 class="text-center">Feature Overview</h4>
+							<hr>
+							<div class="row">
+								<div class="col-3">
+									<img class="icons-box" src="images/icon-1.png">
+								</div>
+								<div class="col-9 padding-left-zero">			
+									<p class="col-heading-icons-details-signin">
+										<strong>View interactive, video content</strong>
+										Absorb relevant supplier information easily, and discover new suppliers quickly.
+									</p>
+								</div>
+							</div>
+							<hr>
+							<div class="row">
+								<div class="col-3">
+									<img class="icons-box" src="images/icon-2.png">
+								</div>
+								<div class="col-9 padding-left-zero">			
+									<p class="col-heading-icons-details-signin">
+										<strong>Like, Rate, and Comment on video content.</strong>
+										Bring as much expertise, experience, and perspective into the business as you can.
+									</p>
+								</div>
+							</div>
+							<hr>
+							<div class="row">
+								<div class="col-3">
+									<img class="icons-box" src="images/icon-3.png">
+								</div>
+								<div class="col-9 padding-left-zero">			
+									<p class="col-heading-icons-details-signin">
+										<strong>Earn Engagement Badges. </strong>
+										Receive recognition for your viewing activities, which help suppliers measure video performance.
+									</p>
+								</div>
+							</div>
+							<hr>
+						</div>
 					</div>
 				</div>
 			</div>
 			 <div class="w-100"></div>
-			<div class="col">
-				<p><a href="register-as-buyer.html">Register as buyer</a>  |  <a href="#">Register as supplier</a></p>
+			<div class="col-10 mx-auto padding-zero">
+				<p class="register-bs"><a href="register-as-buyer.html">Sign in as buyer</a>  &nbsp;&nbsp;|&nbsp;&nbsp;  <a href="#">Sign in as supplier</a></p>
 			</div>
 		</div>
+		<footer>
+		<hr>
+			<div class="row">
+				<div class="col">
+					<p class="footer-logo">diverswithease</p>
+				</div>
+				<div class="col">
+					<p class="footer-copyrights text-right">Copyright © 2013 All Rights Reserved</p>
+				</div>
+			</div>	
+		</footer>
 		
 	</div>	
 
