Signin-up Suppliers.

--- a/register-as-supplier.html
+++ b/register-as-supplier.html
@@ -53,70 +53,56 @@
 			<div class="col-md-10 mx-auto padding-zero">
 				<div class="row mobile-row">			
 					<div class="col-md-12 col-lg-12 col-xl-6">
-						<div class="col-md-12 mx-auto boxed-section">
-							<h4 class="text-center">Sign in as buyer</h4>
+						<div class="col-md-12 mx-auto boxed-section boxed-registered-as-buyer">
+							<h4 class="text-center div-with-ease">diverswithease</h4>
 							<form>
 							  <div class="form-group">
-								<label for="exampleInputEmail1">Email *</label>
+								<label for="exampleInputEmail1">Email*</label>
 								<input type="email" placeholder="test@gmail.com" aria-describedby="emailHelp" id="exampleInputEmail1" class="form-control">
 							  </div>
 							  <div class="form-group">
 								<label for="exampleInputPassword1">Password *</label>
 								<input type="password" placeholder="8 digits or letters" id="exampleInputPassword1" class="form-control">
 							  </div>
-							  <button class="btn btn-primary sign-in-button" type="submit">Sign In</button>
-							  <button class="btn btn-primary forgot-password-button" type="submit">Forgot your password?</button>
+							  <div class="form-group">
+								<label for="exampleInputPassword1">Confirm Password *</label>
+								<input type="password" placeholder="8 digits or letters" id="exampleInputPassword1" class="form-control">
+							  </div>
+							  <a href="complete-profile-supplier.html" class="btn btn-primary sign-in-button join-now-button">Join Now</a>
 							</form>
 							<small id="required-text" class="form-text text-muted text-center">*Required fields</small>
 						</div>
 					</div>
 					<div class="col-md-12 col-lg-12 col-xl-6">
-						<div class="col-md-12 mx-auto boxed-section">
-						<h4 class="text-center">Feature Overview</h4>
+						<div class="col-md-12 mx-auto boxed-section boxed-registered-as-buyer">
+						<h4 class="text-center">Now, let's get started!</h4>
 							<hr>
 							<div class="row">
-								<div class="col-3">
-									<img class="icons-box" src="images/icon-1.png">
-								</div>
-								<div class="col-9 padding-left-zero">			
-									<p class="col-heading-icons-details-signin">
-										<strong>View interactive, video content</strong>
-										Absorb relevant supplier information easily, and discover new suppliers quickly.
+								<div class="col-12">			
+									<p class="col-heading-icons-details-signin  para-two">
+										<strong>Complete your profile.</strong>
+										 Create a password, fill out your basic information, and validate your interests as they relate to supplier discovery.  
+									</p>
+									<p class="col-heading-icons-details-signin para-two">
+										At the end, you’ll be given <strong>one of three cool titles:</strong>
+									</p>
+										<ol class="col-heading-icons-details-signin para-two">
+										  <li>Chief Decision Maker</li>
+										  <li>Creator of Opportunities</li>
+										  <li>Search Engine Optimizer</li>
+										</ol>
+									<p class="col-heading-icons-details-signin para-two">
+										When you View video content suppliers are notified that an Anonymous <strong>SEO</strong> – for example – viewed their profile.  You earn points for activities such as <strong>Likes</strong> and <strong>Comments</strong> that can be awarded to promising suppliers. <strong>Awarded Points</strong> give suppliers a higher ranking on our <strong>Watchlist</strong>.
 									</p>
 								</div>
 							</div>
-							<hr>
-							<div class="row">
-								<div class="col-3">
-									<img class="icons-box" src="images/icon-2.png">
-								</div>
-								<div class="col-9 padding-left-zero">			
-									<p class="col-heading-icons-details-signin">
-										<strong>Like, Rate, and Comment on video content.</strong>
-										Bring as much expertise, experience, and perspective into the business as you can.
-									</p>
-								</div>
-							</div>
-							<hr>
-							<div class="row">
-								<div class="col-3">
-									<img class="icons-box" src="images/icon-3.png">
-								</div>
-								<div class="col-9 padding-left-zero">			
-									<p class="col-heading-icons-details-signin">
-										<strong>Earn Engagement Badges. </strong>
-										Receive recognition for your viewing activities, which help suppliers measure video performance.
-									</p>
-								</div>
-							</div>
-							<hr>
 						</div>
 					</div>
 				</div>
 			</div>
 			 <div class="w-100"></div>
 			<div class="col-10 mx-auto padding-zero">
-				<p class="register-bs"><a href="register-as-buyer.html">Register as buyer</a>  &nbsp;&nbsp;|&nbsp;&nbsp;  <a href="#">Sign in as supplier</a></p>
+				<p class="register-bs"><a href="register-as-buyer.html">Register as buyer</a>  &nbsp;&nbsp;|&nbsp;&nbsp;  <a href="#">Register as supplier</a></p>
 			</div>
 		</div>
 		<footer>
