--- a/signin-up-supplier.html
+++ b/signin-up-supplier.html
@@ -116,7 +116,7 @@
 			</div>
 			 <div class="w-100"></div>
 			<div class="col-10 mx-auto padding-zero">
-				<p class="register-bs"><a href="register-as-buyer.html">Register as buyer</a>  &nbsp;&nbsp;|&nbsp;&nbsp;  <a href="#">Sign in as supplier</a></p>
+				<p class="register-bs"><a href="register-as-supplier.html">Register as supplier</a>  &nbsp;&nbsp;|&nbsp;&nbsp;  <a href="#">Sign in as buyer</a></p>
 			</div>
 		</div>
 		<footer>
