--- a/signin-up-supplier.html
+++ b/signin-up-supplier.html
@@ -54,7 +54,7 @@
 				<div class="row mobile-row">			
 					<div class="col-md-12 col-lg-12 col-xl-6">
 						<div class="col-md-12 mx-auto boxed-section">
-							<h4 class="text-center">Sign in as buyer</h4>
+							<h4 class="text-center">Sign in as supplier</h4>
 							<form>
 							  <div class="form-group">
 								<label for="exampleInputEmail1">Email *</label>
