--- a/complete-profile-buyer.html
+++ b/complete-profile-buyer.html
@@ -54,7 +54,7 @@
 				<div class="row active mobile-row" id="first-step">			
 					<div class="col-md-6">
 						<div class="col-md-12 mx-auto boxed-section boxed-steps-secion">
-							<h4 class="text-center">Complete profile (step 1 0f 2)</h4>
+							<h4 class="text-center">Complete profile (step 1 of 2)</h4>
 							<form>
 							  <div class="form-group">
 								<label for="exampleInputEmail1">First name *</label>
@@ -123,7 +123,7 @@
 									<p class="col-heading-icons-details-signin">
 										<strong>Chief Decision Makers</strong>
 										 tip the scale and 
-										give suppliers real insight into the immediate needs and interests of the diverswithease network of potential buyers.
+										give suppliers real insight into the immediate needs and interests of the diverswithease network of potential buyers.
 									</p>
 								</div>
 							</div>
