Suppliers updates. (icons and text)

--- a/complete-profile-supplier.html
+++ b/complete-profile-supplier.html
@@ -54,7 +54,7 @@
 				<div class="row active mobile-row" id="first-step">			
 					<div class="col-md-6">
 						<div class="col-md-12 mx-auto boxed-section boxed-steps-secion">
-							<h4 class="text-center">Complete profile (step 1 0f 2)</h4>
+							<h4 class="text-center">Complete profile (step 1 of 2)</h4>
 							<form>
 							  <div class="form-group">
 								<label for="exampleInputEmail1">First name *</label>
