--- a/signin-up-supplier.html
+++ b/signin-up-supplier.html
@@ -76,36 +76,36 @@
 							<hr>
 							<div class="row">
 								<div class="col-3">
-									<img class="icons-box" src="images/icon-1.png">
+									<img class="icons-box" src="images/icon-4.png">
 								</div>
 								<div class="col-9 padding-left-zero">			
 									<p class="col-heading-icons-details-signin">
-										<strong>View interactive, video content</strong>
-										Absorb relevant supplier information easily, and discover new suppliers quickly.
+										<strong>Create a video profile.</strong>
+										Help buyers understand how your product, service, or company can help them.
 									</p>
 								</div>
 							</div>
 							<hr>
 							<div class="row">
 								<div class="col-3">
-									<img class="icons-box" src="images/icon-2.png">
+									<img class="icons-box" src="images/icon-5.png">
 								</div>
 								<div class="col-9 padding-left-zero">			
 									<p class="col-heading-icons-details-signin">
-										<strong>Like, Rate, and Comment on video content.</strong>
-										Bring as much expertise, experience, and perspective into the business as you can.
+										<strong>Track your video performance.</strong>
+										Discover your most engaged leads and convert them faster with viewer analytics.
 									</p>
 								</div>
 							</div>
 							<hr>
 							<div class="row">
 								<div class="col-3">
-									<img class="icons-box" src="images/icon-3.png">
+									<img class="icons-box" src="images/icon-6.png">
 								</div>
 								<div class="col-9 padding-left-zero">			
 									<p class="col-heading-icons-details-signin">
-										<strong>Earn Engagement Badges. </strong>
-										Receive recognition for your viewing activities, which help suppliers measure video performance.
+										<strong>Live chat support.</strong>
+										Chat with a relationship manager about our buying members and their supplier diversity programs.
 									</p>
 								</div>
 							</div>
