Register as supplier and filling steps(unfinished)

--- a/register-as-supplier.html
+++ b/register-as-supplier.html
@@ -68,32 +68,38 @@
 								<label for="exampleInputPassword1">Confirm Password *</label>
 								<input type="password" placeholder="8 digits or letters" id="exampleInputPassword1" class="form-control">
 							  </div>
-							  <a href="complete-profile-supplier.html" class="btn btn-primary sign-in-button join-now-button">Join Now</a>
+							  <a href="self-certification-form.html" class="btn btn-primary sign-in-button join-now-button">Join Now</a>
 							</form>
 							<small id="required-text" class="form-text text-muted text-center">*Required fields</small>
 						</div>
 					</div>
 					<div class="col-md-12 col-lg-12 col-xl-6">
 						<div class="col-md-12 mx-auto boxed-section boxed-registered-as-buyer">
-						<h4 class="text-center">Now, let's get started!</h4>
-							<hr>
+						<h4 class="text-center" style="margin-bottom: 20px;">Now, let's get started!</h4>
+							<hr style="margin-bottom: 10px;">
 							<div class="row">
-								<div class="col-12">			
-									<p class="col-heading-icons-details-signin  para-two">
-										<strong>Complete your profile.</strong>
-										 Create a password, fill out your basic information, and validate your interests as they relate to supplier discovery.  
+								<div class="col-12 filling-steps-column">
+									<p>		
+										<strong>Complete your profile.</strong> Create a username and password,
+										complete the diverswithease self-certification form, and
+										upload a compelling business video.
+									</p>			
+									<p class="para-three">
+										<p class="para-three"><strong>We’ll then show you...</strong></p>
+										<p class="para-three"><img class="supplier-profile-icons" src="images/total-number.png">The number of times your video was viewed,</p>
+										<p class="para-three"><img class="supplier-profile-icons" src="images/total-number-profile.png">The number of times your profile was saved to favorites,</p>
+										<p class="para-three"><img class="supplier-profile-icons" src="images/buyers-rate.png">How buyers rate your business content; and</p>
+										<p class="para-three"><img class="supplier-profile-icons" src="images/comments-on-page.png">Any comments posted to your page.</p>
 									</p>
-									<p class="col-heading-icons-details-signin para-two">
-										At the end, you’ll be given <strong>one of three cool titles:</strong>
+									<p>
+										Lastly, viewing activities earn <strong>buyers points</strong> that can be awarded to suppliers. Points give a supplier a higher ranking in the diverswithease search results.
 									</p>
-										<ol class="col-heading-icons-details-signin para-two">
-										  <li>Chief Decision Maker</li>
-										  <li>Creator of Opportunities</li>
-										  <li>Search Engine Optimizer</li>
-										</ol>
-									<p class="col-heading-icons-details-signin para-two">
-										When you View video content suppliers are notified that an Anonymous <strong>SEO</strong> – for example – viewed their profile.  You earn points for activities such as <strong>Likes</strong> and <strong>Comments</strong> that can be awarded to promising suppliers. <strong>Awarded Points</strong> give suppliers a higher ranking on our <strong>Watchlist</strong>.
+									<p class="para-three">
+										<strong>We’ll also show you...</strong>
 									</p>
+									<p class="para-three">
+									    <img class="supplier-profile-icons" src="images/points-awarded.png">The number of points awarded to your company.
+									</p>	   
 								</div>
 							</div>
 						</div>
