--- a/self-certification-form.html
+++ b/self-certification-form.html
@@ -9,7 +9,6 @@
 
     <meta name="description" content="Source code generated using layoutit.com">
     <meta name="author" content="LayoutIt!">
-
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
@@ -98,6 +97,7 @@
 							  <div class="form-group col-md-3">
 								<label for="exampleInputPassword1">Company name</label>
 								<input type="text" placeholder="" id="exampleInputPassword1" class="form-control">
+								<img class="company-info-icon" src="images/info-icon.png" alt="info" data-toggle="tooltip" data-placement="top" data-animation="false" title="Someone who knows your company well."/>
 							  </div>
 							  <div class="form-group col-md-3">
 								<label for="exampleInputPassword1">Title</label>
@@ -312,6 +312,7 @@
 
 
     <script src="js/jquery.min.js"></script>
+	<script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/scripts.js"></script>
   </body>
